--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "Espacio de ideas",
   "dependencies": {
     "argon2": "^0.41.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
