--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
 
-URI_MONGO=mongodb://localhost:27017/spacesocial-2020591
+URI_MONGO=mongodb://localhost:27017/blog-informatica
 
 SECRETORPRIVATEKEY=ThisIsMyKEY2025$JmiguelSpace
